# freshcue

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
assets/demo/: campus_day.txt
docs/: adversarial-audit.md  architecture.md  artifact-audit.md  demo-script.md  dependency-audit.md  device-test-checklist.md  feasibility-report.md  hap-bringup-report.md  known-limitations.md  native-integration.md  privacy-design.md  product-spec.md  testing.md
lib/: main.dart
lib/app/: app_controller.dart  composition.dart  freshcue_app.dart  routes.dart  theme.dart
lib/core/clock/: clock.dart
lib/core/errors/: app_failure.dart
lib/core/logging/: app_log.dart
lib/core/result/: result.dart
lib/core/utils/: id_gen.dart  redactor.dart
lib/data/: card_service.dart
lib/data/database/: app_schema.dart  image_asset_service.dart
lib/data/repositories/: memory_repositories.dart  sql_repositories.dart
lib/domain/entities/: reminder.dart  source_asset.dart  temporal_card.dart
lib/domain/enums/: enums.dart
lib/domain/parser/: category_classifier.dart  date_normalizer.dart  field_extractor.dart  role_classifier.dart  screenshot_parser.dart  time_span_extractor.dart
lib/domain/repositories/: repositories.dart
lib/domain/services/: freshness_policy.dart  reminder_policy.dart
lib/features/archive/: archive_page.dart
lib/features/card_detail/: card_detail_page.dart
lib/features/common/: image_viewer.dart
lib/features/diagnostics/: diagnostics_page.dart
lib/features/home/: card_tile.dart  home_page.dart
lib/features/import/: import_flow.dart
lib/features/review/: review_page.dart
lib/features/settings/: settings_page.dart
lib/platform/: capabilities.dart  channel_gateways.dart  gateways.dart  mock_gateways.dart  platform_registry.dart
ml/: README.md  evaluate.py  train.py
ml/data/: dataset.csv
ohos/: build-profile.json5  oh-package.json5
ohos-reference/: README.md
ohos-reference/entryability/: EntryAbility.ets
ohos-reference/plugins/: SharePlugin.ets
ohos/AppScope/: app.json5
ohos/entry/: build-profile.json5
ohos/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  offline_ocr.cpp  offline_ocr.h  ppocrv5.cpp  ppocrv5.h
ohos/entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
test/app/: app_controller_prefs_test.dart  composition_test.dart
test/data/: card_service_test.dart  database_test.dart
test/domain/: domain_test.dart
test/parser/: parser_test.dart
test/platform/: capabilities_test.dart  platform_registry_test.dart
test/widgets/: app_widget_test.dart
tool/: check.sh  dbg.dart  native_ocr_smoke.cpp  native_ocr_smoke.sh
(+19 files in other folders)
